--- a/client/src/components/main-page/main-page.styles.css
+++ b/client/src/components/main-page/main-page.styles.css
@@ -1,7 +1,136 @@
 .main-page {
-    box-sizing: border-box;
-    margin: 0 auto;
-    padding: 0 20px;
-    max-width: 1200px;
-    width: 100%;
+  display: flex;
+  box-sizing: border-box;
+  margin: 0 auto;
+  padding: 0 20px;
+  max-width: 100vw;
+  width: 100%;
+}
+
+.main-page-sectionLeft {
+  width: 40vw;
+}
+.main-page-sectionLeft-inputs {
+}
+.main-page-sectionLeft-inputDiv {
+  display: flex;
+  flex-direction: row;
+  margin: 20px 0;
+}
+.main-page-sectionLeft-inputItem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 14vw;
+  margin: 0 20px 0 0;
+}
+
+.labelWidth {
+  width: 180px;
+}
+
+.main-page-sectionLeft-inputLabels {
+  font-size: 30px;
+}
+.main-page-sectionLeft-inputSearch {
+  border: none;
+  border-bottom: 1px solid #000;
+  background-color: #00000000;
+  outline: none;
+}
+input[type="range"] {
+}
+.main-page-sectionLeft-inputRange {
+  -webkit-appearance: none;
+  border-radius: 5px;
+  outline: none;
+  margin-top: 18px;
+}
+.main-page-sectionLeft-inputRange::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 1px;
+  background: #000;
+}
+.main-page-sectionLeft-inputRange::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  margin-top: -10px;
+  width: 20px;
+  height: 20px;
+  background: #0078d7;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.main-page-sectionLeft-inputRange-KM {
+  margin-top: 8px;
+}
+.main-page-sectionLeft-inputFilters {
+}
+.main-page-sectionLeft-inputSort {
+  -webkit-appearance: none; /* Usunięcie stylu przeglądarki WebKit */
+  -moz-appearance: none; /* Usunięcie stylu w Firefox */
+  appearance: none; /* Uniwersalne usunięcie stylu */
+  border: none; /* Usunięcie obramowania */
+  outline: none; /* Usunięcie fokusa */
+  border-bottom: 1px solid #000;
+  background-color: #00000000;
+}
+
+.main-page-sectionLeft-inputSort:hover {
+}
+.select-wrapper {
+  position: relative;
+}
+.select-wrapper::after {
+  content: "▼"; /* Symbol strzałki */
+  font-size: 10px;
+  margin-top: 18px;
+  color: #333;
+  position: absolute;
+  right: 15px; /* Pozycja strzałki */
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none; /* Strzałka nie blokuje kliknięcia */
+}
+.addEventDiv-button {
+}
+.main-page-sectionRight {
+}
+
+.main-page-ButtonLogin {
+  font-size: 24px;
+  font-weight: 400;
+  background-color: #ffffff00;
+  border: none;
+  margin: 0 5px;
+}
+
+.nav {
+  display: flex;
+  right: 0;
+  position: fixed;
+  margin: 10px 0;
+}
+
+.nav-userLabel {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  align-items: center;
+  padding: 0 20px;
+}
+
+.nav-userLabel-img {
+  margin: auto;
+  width: 40px;
+  margin: 0 5px;
+}
+
+.nav-userLabel-arrow {
+  font-size: 30px;
+  margin: 10px 0 0 0;
+}
+
+.addEventDiv {
+  display: flex;
 }
