--- a/client/src/components/map/autocomplete/autocomplete.css
+++ b/client/src/components/map/autocomplete/autocomplete.css
@@ -1,11 +1,20 @@
 .autocomplete-container {
-    width: 300px;
+  width: 300px;
 }
 
 .autocomplete-container input {
-    box-sizing: border-box;
-    width: 100%;
-    height: 40px;
-    padding: 0 12px;
-    font-size: 18px;
+  margin: 10px 0 0 0;
+  box-sizing: border-box;
+  width: 100%;
+  height: 40px;
+  padding: 0 12px;
+  font-size: 18px;
+  border: 0;
+  background-color: #fff(1, 1, 1, 0.215);
+  border-radius: 50px;
+  box-shadow: 0px 0px 5px 0px;
+  color: #000;
+  text-decoration: none;
+  outline: none;
+  text-align: center;
 }
