--- a/client/src/components/map/event-map.css
+++ b/client/src/components/map/event-map.css
@@ -1,5 +1,14 @@
 .autocomplete-control {
-    background: #fff;
-    box-sizing: border-box;
-    margin: 24px;
+  background: #ffffff00;
+  box-sizing: border-box;
+  margin: 24px;
+}
+
+.main-page-sectionRight-map {
+  display: block;
+  position: fixed;
+  right: 0px;
+  margin: 150px 0 0 0;
+  width: 56vw;
+  height: 90vh;
 }
