--- a/client/src/components/map/markers/event-marker.css
+++ b/client/src/components/map/markers/event-marker.css
@@ -1,5 +1,28 @@
+.markerDiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .marker {
-    background-color: red;
-    height: 40px;
-    width: 40px;
+  background-color: #0067b8;
+  border: #000;
+  box-shadow: 00px 5px 50px 25px #0067b8;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  margin-top: 2px;
+  z-index: 1;
+}
+
+.markerTitle {
+  font-size: 16px;
+  padding: 2px 15px;
+  border-radius: 15px;
+  background-color: #0067b8;
+  color: #fff;
+  font-weight: 300;
+  margin: 0 0 0 0;
+  z-index: 552;
 }
