--- a/client/src/components/main-page/main-page.styles.css
+++ b/client/src/components/main-page/main-page.styles.css
@@ -6,7 +6,6 @@
   max-width: 100vw;
   width: 100%;
 }
-
 .main-page-sectionLeft {
   width: 40vw;
 }
@@ -111,7 +110,6 @@ input[type="range"] {
   border: none;
   margin: 0 5px;
 }
-
 .nav {
   display: flex;
   right: 0;
@@ -140,4 +138,52 @@ input[type="range"] {
 
 .addEventDiv {
   display: flex;
+}
+
+@media (max-width: 500px) {
+  .main-page {
+    display: flex;
+    flex-direction: row;
+    margin-top: 50px;
+  }
+  .nav {
+    height: 0;
+  }
+  .main-page-sectionLeft {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+  }
+}
+
+@media (max-width: 500px) {
+  /* .main-page-sectionLeft-inputs {
+    width: 100vw;
+    justify-content: center;
+  } */
+  .main-page-sectionLeft-inputItem {
+    width: 45vw;
+  }
+  .main-page-sectionLeft-inputItem {
+    margin: 5px 0;
+  }
+  .main-page-sectionLeft-inputDiv {
+    flex-direction: column;
+    gap: 30px;
+    margin: auto auto auto 20px;
+  }
+  .labelWidth {
+    border-radius: 0;
+    width: 300px;
+  }
+  .main-page-ButtonLogin {
+    background-color: #0067b8;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 15px;
+    font-size: 12px;
+  }
 }
