--- a/client/src/components/modal/basic-modal.css
+++ b/client/src/components/modal/basic-modal.css
@@ -79,3 +79,12 @@
   /* box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.04);
   transform: translate(-4px, 4px); */
 }
+
+@media (max-width: 500px) {
+  .modal-content {
+    display: flex;
+    justify-content: center;
+    width: 70vw;
+    height: 70vh;
+  }
+}
