--- a/client/src/components/events/event/eventList-style.css
+++ b/client/src/components/events/event/eventList-style.css
@@ -1,35 +1,142 @@
 .eventList {
   display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #0078d7;
   margin: 5px;
   box-sizing: border-box;
-  padding: 10px;
+  padding: 16px;
   color: #fff;
   border-radius: 15px;
+  height: 160px;
 }
 .eventList-itemDiv {
   box-sizing: border-box;
   padding: 2px;
+  width: 400px;
 }
 .eventList-itemDiv2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   box-sizing: border-box;
   padding: 2px;
   display: flex;
-  width: 30vw;
+  width: auto;
   gap: 20px;
   border-top: 1px solid #fff;
+  padding: 6px 0 6px 0;
 }
 .eventList-title {
   font-size: 30px;
-  margin: 10px 0;
+  margin: 0 0 15px 0;
 }
 .eventList-city {
-  border-right: 1px solid #fff;
-  padding-right: 20px;
+  /* border-right: 1px solid #fff; */
+  padding-right: 0px;
+  height: auto;
+  width: 120px;
+  margin: auto;
+}
+.eventList-city-item {
+  margin: 0;
+  padding: 0;
 }
 .eventList-people {
   border-right: 1px solid #fff;
   padding-right: 20px;
+  margin: auto;
 }
 .eventList-Date {
+  margin: 0 auto;
+  border-right: 1px solid #fff;
+  border-left: 1px solid #fff;
+  padding-right: 20px;
+  padding-left: 20px;
+  height: auto;
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.eventList-Tags {
+  margin: auto;
+  width: 100px;
+}
+.eventList-Tags-items {
+  margin: 4px 0;
+}
+.eventList-details {
+  margin: auto;
+  background-color: #fff;
+  color: #000;
+  padding: 20px 10px;
+  border-radius: 15px;
+  cursor: pointer;
+  transition: transform 0.1s linear;
+}
+.eventList-details:hover {
+  background-color: #cfcfcf;
+  color: #000;
+  transform: scale(1.12);
+}
+
+@media (max-width: 500px) {
+  .eventList {
+    background-color: #0078d7;
+    margin: 2px;
+    box-sizing: border-box;
+    padding: 16px;
+    color: #fff;
+    border-radius: 15px;
+    height: 160px;
+    width: 98vw;
+  }
+  .eventList-itemDiv {
+    width: 60vw;
+  }
+  .eventList-itemDiv2 {
+    width: 60vw;
+    font-size: 12px;
+  }
+  .eventList-title {
+    font-size: 20px;
+  }
+  .eventList-city {
+  }
+  .eventList-city-item {
+  }
+  .eventList-people {
+  }
+  .eventList-Date {
+  }
+
+  .eventList-Tags {
+  }
+  .eventList-Tags-items {
+  }
+  .eventList-details {
+  }
+  .eventList-details:hover {
+    transform: scale(1);
+  }
+}
+@media (max-width: 450px) {
+  .eventList-Date {
+    margin: 0;
+    padding: 5px;
+  }
+}
+@media (max-width: 405px) {
+  .eventList-city {
+    margin-left: 10px;
+  }
+  .eventList-itemDiv2 {
+    gap: 0;
+  }
+  .eventList-details {
+    padding: 5px 10px;
+    font-size: 12px;
+  }
 }
