--- a/client/src/components/pages/main-page/main-page.styles.css
+++ b/client/src/components/pages/main-page/main-page.styles.css
@@ -9,10 +9,15 @@
 .main-page-sectionLeft {
   width: 40vw;
 }
+.main-page-sectionLeft-header {
+  text-align: center;
+  font-weight: 400;
+}
 .main-page-sectionLeft-inputs {
 }
 .main-page-sectionLeft-inputDiv {
   display: flex;
+  justify-content: center;
   flex-direction: row;
   margin: 20px 0;
 }
@@ -23,7 +28,11 @@
   width: 14vw;
   margin: 0 20px 0 0;
 }
-
+.main-page-sectionLeft-Tags {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
 .labelWidth {
   width: 180px;
 }
@@ -110,32 +119,6 @@ input[type="range"] {
   border: none;
   margin: 0 5px;
 }
-.nav {
-  display: flex;
-  right: 0;
-  position: fixed;
-  margin: 10px 0;
-}
-
-.nav-userLabel {
-  display: flex;
-  justify-content: center;
-  align-self: center;
-  align-items: center;
-  padding: 0 20px;
-}
-
-.nav-userLabel-img {
-  margin: auto;
-  width: 40px;
-  margin: 0 5px;
-}
-
-.nav-userLabel-arrow {
-  font-size: 30px;
-  margin: 10px 0 0 0;
-}
-
 .addEventDiv {
   display: flex;
 }
@@ -144,7 +127,8 @@ input[type="range"] {
   .main-page {
     display: flex;
     flex-direction: row;
-    margin-top: 50px;
+    justify-content: center;
+    margin: 50px 0 0 0;
   }
   .nav {
     height: 0;
@@ -154,6 +138,7 @@ input[type="range"] {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    align-self: center;
     width: 100vw;
     height: 100vh;
   }
@@ -165,10 +150,8 @@ input[type="range"] {
     justify-content: center;
   } */
   .main-page-sectionLeft-inputItem {
-    width: 45vw;
-  }
-  .main-page-sectionLeft-inputItem {
     margin: 5px 0;
+    width: 45vw;
   }
   .main-page-sectionLeft-inputDiv {
     flex-direction: column;
@@ -186,4 +169,48 @@ input[type="range"] {
     border-radius: 15px;
     font-size: 12px;
   }
+  .main-page-sectionLeft-Tags {
+    margin: 15px 0;
+  }
+  .addEventDiv-button {
+    margin: 15px 0;
+  }
+}
+
+.tag-button-not-chosen {
+  background-color: #00182b;
+  color: #777 !important;
+  font-weight: ;
+  padding: 10px 5px;
+  border: none;
+  margin: 0 3px 0 3px;
+  border-radius: 15px;
+}
+.tag-button-chosen {
+  background-color: #0067b8;
+  color: #fff !important;
+  padding: 10px 5px;
+  border: none;
+  margin: 0 3px 0 3px;
+  border-radius: 15px;
+}
+.tag-button-chosen:hover {
+  transform: scale(1);
+}
+.tag-button-not-chosen:hover {
+  transform: scale(1);
+}
+.moreEventsButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px auto;
+  height: 40px;
+  width: 50px;
+  font-size: 16px;
+  font-weight: 300;
+  border-radius: 15px;
+  background-color: #0067b8;
+  color: #fff;
+  border: none;
 }
