--- a/client/src/components/events/add-event/form/AddEventForm-style.css
+++ b/client/src/components/events/add-event/form/AddEventForm-style.css
@@ -46,14 +46,17 @@
     width: 400px;
     margin-top: 120px;
   }
+  .addEventModal-locationAddress {
+    font-size: 14px;
+  }
 }
 
 .calendarModal {
-  margin-top: 150px;
+  margin-top: 350px;
 }
 @media (max-width: 500px) {
   .calendarModal {
-    /* margin-top: 0px;
-    width: 300px; */
+    margin-top: 10px;
+    width: 300px;
   }
 }
