--- a/client/src/components/pages/main-page/main-page.styles.css
+++ b/client/src/components/pages/main-page/main-page.styles.css
@@ -105,6 +105,7 @@ input[type="range"] {
   border: none;
   font-size: 30px;
   font-weight: 100;
+  color: #000;
 }
 .addEventDiv-button:hover {
   background-color: #00000000;
